Improved default JVM arguments for performance and less memory usage, as not everyone can spare 8GB RAM